--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=MiniStoreDB;User Id=sa;Password=Code@123;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=WIN167831\\SQLEXPRESS;Persist Security Info=True;User ID=user;Password=Code@123;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Application Name=\"SQL Server Management Studio\";Command Timeout=30"
   },
+
   "Jwt": {
     "Key": "f36d2d09-21b7-4bf9-909a-bbb22022c04a",
     "Issuer": "MiniStore",
