--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=WIN167831\\SQLEXPRESS;Persist Security Info=True;User ID=user;Password=Code@123;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Application Name=\"SQL Server Management Studio\";Command Timeout=30"
+    "DefaultConnection": "Server=WIN167831\\SQLEXPRESS;Database=demaxdb;User Id=user;Password=Code@123;TrustServerCertificate=True;"
   },
-
   "Jwt": {
     "Key": "f36d2d09-21b7-4bf9-909a-bbb22022c04a",
     "Issuer": "MiniStore",
